--- a/university/src/main/resources/application.properties
+++ b/university/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 
+spring.datasource.url = jdbc:mysql://localhost/university
+spring.datasource.username = root
+spring.datasource.password = 123456
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
