--- a/university/src/main/resources/application.properties
+++ b/university/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url = jdbc:mysql://localhost/university
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+server.port=8080
