--- a/university/src/main/resources/application.properties
+++ b/university/src/main/resources/application.properties
@@ -5,4 +5,11 @@ spring.datasource.url = jdbc:mysql://localhost/university
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-server.port=8081
+server.port=8080
+
+logging.level.org.springframework.web=ERROR
+logging.level.ua.lviv.lgs.university=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %level %logger{36} -%msg%n
+
+logging.file.name=application.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %level %logger{36} -%msg%n
